# axum-test

./: .env  Cargo.toml
migration/: .env  mod.rs  post.rs  prelude.rs  sea_orm_active_enums.rs
migration/src/: m20220101_000001_create_table.rs
src/: app.rs  main.rs
src/db/: connection.rs
src/entities/: mod.rs
src/routes/: api.rs
