[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
log = "0.4.25"
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.43.0", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"]}
